--- a/TODO
+++ b/TODO
@@ -5,5 +5,10 @@ After that, in generateTasks :
 1) If input <> calibrated.csv, generate task for input and pass calibrated csv as parameter to the task.
 
 In print reads, get the calibrated csv from the parameter and perform further operation.
+-Done
 
 Create haplotype caller task.
+-Done
+
+Right now, only 1 worker is used for all the tasks.
+Mark duplicates does not work in the asynchronous tree.
